--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,27 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.app-frame {
+  margin: 5%;
+  padding: 30px;
+  width: calc(80vw);
+
+  /* background-image: -webkit-gradient(linear, left top, left buttom, from(#666)); */
+  background-image: red;
+}
+
+.customers-actions {
+  background: #AAA;
+  padding: 10px;
+  margin: 10px;
+}
+
+.customers-actions button {
+  background: white;
+  min-width: 100px;
+  height: 30px;
+  margin: 5px;
 }
