--- a/src/index.css
+++ b/src/index.css
@@ -9,8 +9,8 @@ body {
   padding: 30px;
   width: calc(80vw);
 
-  /* background-image: -webkit-gradient(linear, left top, left buttom, from(#666)); */
-  background-image: red;
+  background-image: -webkit-linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996);  /* Chrome 10-25, Safari 5.1-6 */
+  background-image: linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .customers-actions {
