--- a/src/index.css
+++ b/src/index.css
@@ -1,34 +1,165 @@
+
+
+
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
 }
 
-.app-frame {
-  margin: 5%;
-  padding: 30px;
-  width: calc(80vw);
 
-  background-image: -webkit-linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996);  /* Chrome 10-25, Safari 5.1-6 */
-  background-image: linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+.app-frame {
+  margin: 0;
+  padding: 30px;
+  box-sizing: border-box;
+  width: 85vw;
+  height: 90vh;
+  background: white;
 }
 
 .customers-actions {
-  background: #AAA;
+  margin: 0;
+  position: absolute;
+  bottom: 20px;
+  left: 30px;
+  background: rgba(0,0,0,0.2);
   padding: 10px;
-  margin: 10px;
+  width: calc(100% - 80px);
 }
 
 .customers-actions button {
-  color: black;
+  background: white;
   min-width: 100px;
   height: 30px;
   margin: 5px;
+  border-style: none;
+  border-radius: 3px;
+  font-weight: bolder;
+}
+
+.customers-actions button:hover {
+  background: #F0F0F0;
+  border-style: solid;
+}
+
+.customers-list .customers-list-item {
+  width: 100%;
+  background: #FFF;
+  transition: 500ms;
+  height: 40px;
+}
+
+.customers-list .customers-list-item:nth-child(even) {
+  background: #EEE;
+}
+
+.customers-list .customers-list-item:hover {
+  background: #84adad3a;
+  border: 1px solid;
 }
 
 .customers-list-item .field {
-  background: #EEE;
   width: 160px;
-  margin: 5px;
+  margin: 1px;
+  padding: 4px;
+  overflow: hidden;
   display: inline-block;
+  line-height: 40px;
+}
+.customers-list-item .field:first-child {
+  width: 70%;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+.customers-list-item .field {
+  width: 15%;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+
+.customers-list-item .field:first-child > a {
+  color: #263238;
+  text-decoration: none;
+  font-weight: bolder;
+}
+
+.customers-list-item .field a {
+  color: #78909c;
+  text-decoration: none;
+
+}
+
+.app-frame p {
+  color: white;
+  font-size: 10px;
+  font-style: italic;
+}
+
+.app-frame form {
+  width: 100%;
+  background: rgba(255,255,255,0.5);
+  padding: 20px;
+  box-sizing: border-box;
+  border-radius: 5px;
+}
+
+.app-frame form label {
+  width: 100%;
+  display: inline-block;
+  margin-top: 10px;
+  color: rgba(0,0,0,0.7);
+  font-size: 12px;
+}
+
+.app-frame form input {
+  font-size: 18px;
+  font-style: bolder;
+}
+
+.app-frame form span {
+  color: red;
+  margin: 5px;
+  font-size: 10px;
+  font-style: italic;
+}
+
+
+.app-header {
+  border: 0;
+  border-bottom: 1px;
+  border-style: solid;
+  border-color: #263238;
+}
+
+.app-header h1 {
+  color: #263238;
+}
+
+.app-frame h2 {
+  font-weight: lighter;
+  font-size: 1.3em;
+}
+
+img {
+  border-radius: 4px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  overflow: hidden;
+  height: 300px;
+  margin: 0 auto;
+  display: block;
+}
+
+.customer-data strong {
+  width: 100%;
+  display: inline-block;
+  margin-top: 10px;
+  color: #333;
+  font-size: 10px;
+}
+
+.customer-data strong {
+  font-size: 20px;
 }
